deploy/development/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: issue-notifier
  labels:
    app: issue-notifier
