deploy/development/issue-notifier-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: issue-notifier
  name: issue-notifier-api
  labels:
    tier: api
    app: issue-notifier
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: api
  template:
    metadata:
      labels:
        tier: api
        app: issue-notifier
    spec:
      containers:
        - name: issue-notifier-api
          image: hemakshis/issue-notifier-api:latest
          imagePullPolicy: Never
          resources:
            requests:
              cpu: "20m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"
          ports:
            - containerPort: 8001
---

apiVersion: v1
kind: Service
metadata:
  namespace: issue-notifier
  name: issue-notifier-api
  labels:
    app: issue-notifier
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8001
  selector:
    tier: api
