deploy/development/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: issue-notifier
  name: postgres
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: issue-notifier
      tier: database
  template:
    metadata:
      labels:
        app: issue-notifier
        tier: database
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
---

apiVersion: v1
kind: Service
metadata:
  namespace: issue-notifier
  name: postgres
spec:
  type: ClusterIP
  selector:
    tier: database
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
